<resources>
    <string name="app_name">Elearning Prima Unggul</string>
    <string name="guru">Guru</string>
    <string name="siswa">Siswa</string>
    <string name="nis">NIS</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="materi_logika_dasar">Materi Logika Dasar</string>
    <string name="nig">nig</string>
    <string name="NIG">nig</string>
    <string name="NIGy">NIG</string>
    <string name="nisy">NIS</string>
    <string name="wini">WINI</string>
    <string name="subject">Subject</string>
    <string name="pelajaran">Pelajaran</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="masukan_deskripsi">Masukan Deskripsi</string>
    <string name="file">File</string>
    <string name="input_file">Input File</string>
    <string name="buat_materi_baru">+Buat Materi Baru</string>
    <string name="hint_masukan_komentar">Masukan Komentar</string>
    <string name="club_sepak_bola_yang_memenangkan_liga_champions_adalah">Club sepak bola yang memenangkan liga champions adalah :</string>
    <string name="real_madrid">Real Madrid</string>
    <string name="liverpool">Liverpool</string>
    <string name="barcelona">Barcelona</string>
    <string name="juventus">Juventus</string>
    <string name="list_pelajaran">List Pelajaran</string>
    <string name="iwan_sulistyono_st_mt">IWAN SULISTYONO, ST, MT</string>
    <string name="about">about</string>
    <string name="Jawaban_A">Jawaban A</string>
    <string name="Jawaban_B">Jawaban B</string>
    <string name="Jawaban_C">Jawaban C</string>
    <string name="Jawaban_D">Jawaban D</string>
    <string name="Jawaban_E">Jawaban E</string>
    <string name="jawaban_benar">Jawaban Benar</string>
    <string name="web">web 1</string>
    <string name="permission_dialog">Accessing Location Permissions required</string>
    <string name="go_to_permissions_settings">Go to App settings and enable permissions</string>
    <string name="quiz">Quiz</string>
    <string name="buat_pelajaran_baru">Buat pelajaran baru</string>
    <string name="materi">Materi</string>
    <string name="pilih_file">Pilih File</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="tambah_quiz">Tambah Quiz</string>
    <string name="sebelum">SEBELUM</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="action_settings">Settings</string>
    <string name="next_questions">next</string>
    <string name="Sebelum">Sebelum</string>
    <string name="Sebelumnya">Sebelumnya</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="tambah_soal">Tambah soal</string>
    <string name="pertanyaan">Pertanyaan</string>
    <string name="simpan">Simpan</string>
    <string name="selesai">Selesai</string>
    <string name="tambah_siswa">tambah siswa</string>
    <string name="lihat_nilai_siswa">Lihat Nilai Siswa</string>
</resources>
