<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_materi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="3dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dfe6e9"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/txt_nomor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1."
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/txt_pertanyaan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Pertanyaan"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Jawaban_A" />

            <RadioButton
                android:id="@+id/rb_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Jawaban_B" />

            <RadioButton
                android:id="@+id/rb_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Jawaban_C" />

            <RadioButton
                android:id="@+id/rb_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Jawaban_D" />

            <RadioButton
                android:id="@+id/rb_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Jawaban_E" />
        </RadioGroup>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_hapus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hapus"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>