<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.inputsoal.InputSoalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/pertanyaan"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_pertanyaan"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_weight="1.7"
            android:background="#dfe6e9"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="5"
            android:maxLength="150"
            tools:ignore="Autofill,LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/Jawaban_A"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="#dfe6e9"
            android:hint="@string/Jawaban_A"
            android:inputType="text"
            android:maxLength="30"
            tools:ignore="Autofill" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/Jawaban_B"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="#dfe6e9"
            android:hint="@string/Jawaban_B"
            android:inputType="text"
            android:maxLength="30"
            tools:ignore="Autofill" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/Jawaban_C"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_c"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="#dfe6e9"
            android:hint="@string/Jawaban_C"
            android:inputType="text"
            android:maxLength="30"
            tools:ignore="Autofill" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/Jawaban_D"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_d"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="#dfe6e9"
            android:hint="@string/Jawaban_D"
            android:inputType="text"
            android:maxLength="30"
            tools:ignore="Autofill" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/Jawaban_E"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_e"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="#dfe6e9"
            android:hint="@string/Jawaban_E"
            android:inputType="text"
            android:maxLength="30"
            tools:ignore="Autofill" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/jawaban_benar"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A" />

            <RadioButton
                android:id="@+id/rb_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B" />

            <RadioButton
                android:id="@+id/rb_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C" />

            <RadioButton
                android:id="@+id/rb_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D" />

            <RadioButton
                android:id="@+id/rb_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="E" />
        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_simpan"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan" />
    </LinearLayout>

</LinearLayout>